# pass-api

./: .gitignore  pyproject.toml
STORAGE/: readme.txt  users.json
app/: config.py  example.env  main.py
app/controllers/: FsEntity.py
app/models/: FsEntity.py  User.py
app/routes/: fs.py
server/: .env.example  config.py  main.py
server/controllers/: FsEntity.py  User.py
server/database/: DbController.py
server/dependencies/: auth.py
server/models/: AToken.py  FsEntity.py  User.py
server/routes/: fs.py  user.py  utility.py
server/utils/: hashing_password.py
